Fix Java compilation errors and project structure - Updated Java version to 1.8, fixed POM parent references, removed unused imports, fixed type safety issues, and created executable JAR files